# PANW-case-challenge

./: .gitignore  DOCUMENTATION.md  README.md  index.html  package.json  pnpm-lock.yaml
.claude/commands/: final-review.md
.claude/skills/frontend/: SKILL.md
docs/: technical_doc.md
docs/future/: macos-widgets.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/examples/: verify_ml.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/db/: chat.rs  emotions.rs  images.rs  journals.rs  mod.rs  schema.rs  search.rs  templates.rs  vectors.rs
src-tauri/src/db/migrations/: 003_add_title_entry_type.sql
src-tauri/src/llm/: chat.rs  mod.rs  ollama.rs  safety.rs
src-tauri/src/ml/: embeddings.rs  mod.rs  models.rs  sentiment.rs
src-tauri/src/security/: keychain.rs  mod.rs
src/components/auth/: AuthGuard.tsx  LockedScreen.tsx  ProtectionSetup.tsx  index.ts
src/components/chat/: ChatInput.tsx  ChatView.tsx  DistressBanner.tsx  EmotionPulse.tsx  EntryContextHeader.tsx  MessageBubble.tsx  MessageList.tsx  OllamaStatus.tsx  SafetyModal.tsx  SourceCard.tsx  TypingIndicator.tsx  index.ts  smart-actions.ts
src/components/dashboard/: DailyPrompt.tsx  Dashboard.tsx  MonthlyCalendar.tsx  OnThisDay.tsx  StreakCard.tsx  SummaryCard.tsx  WeekEmotions.tsx  index.ts
src/components/journal/: AISidepanel.tsx  (+9 more)
src/hooks/: use-animated-presence.ts  use-chat.ts  use-click-outside.ts  use-dashboard.ts  use-debounced-save.ts  use-image-upload.ts  use-journal.ts  use-ml.ts  use-save-on-close.ts  use-summary.ts  use-templates.ts  use-undo-history.ts
src/lib/: entry-utils.ts  stats-utils.ts
src/stores/: chat-store.ts  ui-store.ts
src/types/: chat.ts  emotions.ts  journal.ts  templates.ts
(+23 files in other folders)
