[package]
name = "mindscribe"
version = "0.1.0"
description = "Local-first AI journaling app"
authors = ["you"]
edition = "2021"

[lib]
name = "mindscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

