[package]
name = "mindscribe"
version = "0.1.0"
description = "Local-first AI journaling app"
authors = ["you"]
edition = "2021"

[lib]
name = "mindscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# Vector database extension
sqlite-vec = "0.1"

# ML/AI dependencies
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.4"

# LLM/Chat dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
regex = "1"

# Image encoding
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

